<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">KEM Kelas 8</string>
    <string name="logo_aplikasi">Logo Aplikasi</string>
    <string name="masukkan_nisn">Masukkan NISN</string>
    <string name="masukkan_kata_sandi">Masukkan Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="beranda">Beranda</string>
    <string name="menu">Menu</string>
    <string name="info">Info</string>
    <string name="ikon_informasi">Ikon Informasi</string>
    <string name="petunjuk">Petunjuk</string>
    <string name="ikon_petunjuk">Ikon Petunjuk</string>
    <string name="latihan">Latihan</string>
    <string name="grafik">Grafik</string>
    <string name="informasi">Informasi</string>
    <string name="selesai_membaca">Selesai Membaca</string>
    <string name="teks_bacaan">Teks bacaan...</string>
    <string name="judul_teks">Judul Teks</string>
    <string name="isi_informasi"><b>Kemampuan Efektif Membaca (KEM)</b> merupakan ukuran kemampuan membaca seseorang. Skor KEM diperoleh dari perpaduan antara kecepatan membaca dan pemahaman bacaan seseorang.\n\nPada aplikasi ini,  terdapat teks dan soal pemahaman untuk melatih kemampuan efektif membaca kamu. Setelah kamu membaca teks dan menjawab soal pemahaman,  maka kamu akan memperoleh skor KEM. \n\nSiswa tingkat SMP idealnya memiliki KEM 140-175 kpm. Jika skor kamu masih kurang dari 140 kpm, artinya kamu harus lebih banyak berlatih membaca.\n\n<b>Rumus KEM</b></string>
    <string name="tentang_kami">Aplikasi ini dibuat untuk mengukur Kemampuan Efektif Membaca (KEM) siswa kelas 8 SMP.\n\nAplikasi ini dapat membantu siswa dan guru dalam proses pembelajaran. Selain itu, aplikasi ini dapat memudahkan siswa berlatih meningkatkan KEM secara mandiri di mana pun siswa berada.\n\nAplikasi ini dirancang dalam beberapa jenjang, yaitu SD, SMP, dan SMA\n\n\n <b>Tim Perancang Aplikasi</b>\n1.Yulia Pertiwi Faisol\n2.Dr. Hj. Vismaia S. D., M.Pd.\n3.Rosita Rahma M.Pd.\n4.Dr. Hj. Yeti Mulyati, M.Pd.\n\n\n<b>Tim Pengembang Aplikasi</b>\n1.Rizki Fauzi Rahman</string>
    <string name="rumus_kem">\n<b>JK</b>: jumlah kata yang dibaca\n<b>W</b>: waktu tempuh baca dalam satuan detik\n<b>B</b>: jumlah jawaban benar\n<b>SI</b>: sekor ideal atau sekor maksimal\n<b>KPM</b>: kata per menit</string>
    <string name="header"><b>KEMAMPUAN EFEKTIF \n MEMBACA \n KELAS 8 SMP</b></string>
    <string name="petunjukdes">
Setelah membaca info dan petunjuk, silakan klik tombol menu “latihan”.\n\n
Lalu, pilih teks secara berurutan dari teks pertama sampai teks terakhir.\n\n
Kemudian, mulai bacalah teks yang dipilih. Usahakan bacalah secara cepat namun tetap teliti.\n\n
Setelah selesai membaca, klik tombol “Selesai” untuk melanjutkan ke bagian pertanyaan. (Setelah menekan tombol “Selesai”, kalian tidak bisa membaca ulang teks tersebut).\n\n
Jawablah 5 buah pertanyaan yang tertera dengan cara memilih pilihan jawaban benar.\n\n
Jika sudah menjawab 5 pertanyaan tersebut, maka skor KEM kamu akan muncul.\n\n
Setelah itu, kamu bisa berlatih pada teks selanjutnya, lakukan latihan dengan langkah yang sama seperti sebelumnya.\n\n
Kamu juga bisa melihat perkembangan kemampuan membaca pada menu “Grafik”. Di sana tertera skor KEM-mu pada setiap teks yang telah dibaca.\n\n
Jika sepuluh teks sudah kalian baca, kalian bisa memulai kembali berlatih dari teks pertama.\n\n
Selamat Berlatih!\n\n
</string>
</resources>
