<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/latar"
    tools:context="com.upi.bahasaindonesia.kem.BerandaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header"
                android:textAlignment="center"
                android:textColor="@color/cardview_light_background"
                android:textSize="30dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/tombol_informasi"
                android:layout_width="270dp"
                android:layout_height="120dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_card_2"
                android:gravity="start|center"
                android:orientation="horizontal"
                android:padding="30dp"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/ikon_informasi"
                    android:src="@drawable/ikon_informasi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Info KEM"
                    android:textColor="@color/putih"
                    android:textSize="37dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tombol_petunjuk"
                android:layout_width="270dp"
                android:layout_height="120dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_card_4"
                android:gravity="start|center"
                android:orientation="horizontal"
                android:padding="30dp"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/ikon_petunjuk"
                    android:src="@drawable/ikon_tanda_tanya" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/petunjuk"
                    android:textColor="@color/putih"
                    android:textSize="37sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tombol_latihan"
                android:layout_width="270dp"
                android:layout_height="120dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/tombol_latihan"
                android:gravity="start|center"
                android:orientation="horizontal"
                android:padding="30dp"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/ikon_petunjuk"
                    android:src="@drawable/ikon_latihan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latihan"
                    android:textColor="@color/putih"
                    android:textSize="37sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tombol_grafik"
                android:layout_width="270dp"
                android:layout_height="120dp"
                android:background="@drawable/tombol_grafik"
                android:gravity="start|center"
                android:orientation="horizontal"
                android:padding="30dp"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/ikon_petunjuk"
                    android:src="@drawable/ikon_grafik" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grafik"
                    android:textColor="@color/putih"
                    android:textSize="40sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
