<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/latar"
    tools:context=".InformasiActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/transparan"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentInsetStart="0dp"
            app:layout_scrollFlags="scroll">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingEnd="20dp"
                android:paddingStart="20dp">

                <ImageButton
                    android:id="@+id/tombol_keluar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparan"
                    android:contentDescription="@string/menu"
                    android:src="@drawable/ikon_keluar_putih" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="0dp"
                    android:text="INFO"
                    android:textAlignment="gravity"
                    android:textAllCaps="true"
                    android:textColor="@color/putih"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/boks_masukan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:lineSpacingExtra="7dp"
                android:text="@string/isi_informasi"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription=""
                android:scaleType="fitCenter"
                android:src="@drawable/rumus_kem_8"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="773dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/rumus_kem" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>